--- a/src/CoffeeMaker.less
+++ b/src/CoffeeMaker.less
@@ -1,220 +1,184 @@
 @import "../../_mixins";
 @import "../../_variables";
 
-.bootstrap-select.btn-group:not(.input-group-btn),
-.bootstrap-select.btn-group[class*="span"] {
-    margin: 0 !important;
-}
-.cwLayoutNetwork {
-    display: block;
-    width: 100%;
-}
-
-div.cwLayoutNetworkLegend {
-    display: flex;
-    width: 80%;
+div.CoffeeMakerTab {
+  margin: 5px;
+  transition: box-shadow 0.3s;
+  color: rgba(0, 0, 0, 0.8);
+  display: block;
+  height: 48px;
+  line-height: 48px;
+  padding: 0 1rem;
+  box-shadow: inset 0 -2px #000000;
+  cursor: pointer;
 }
 
-
-div.LayoutNetork_filterGroup {
-    display: block;
+div.CoffeeMakerTab.selected {
+  box-shadow: inset 0 -2px #03a0ce;
 }
 
-div.LayoutNetork_filterGroup div {
-    display: flex;
-    flex-wrap: wrap;
-    background-color: transparent;
+div.CoffeeMakerTabs {
+  display: flex;
 }
 
-div.cwLayoutNetworkLegend i {
-    font-size: 1rem;
+.CoffeeMaker {
+  /* Style the tab content */
+}
+.CoffeeMaker .tabs {
+  overflow: hidden;
+  border: 1px solid #ccc;
+  background-color: #f1f1f1;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  /* Style the buttons inside the tab */
+  /* Change background color of buttons on hover */
+  /* Create an active/current tablink class */
+}
+.CoffeeMaker .tabs .tab-link {
+  background-color: inherit;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  transition: 0.3s;
+  font-size: 17px;
+}
+.CoffeeMaker .tabs .tab-link:hover {
+  background-color: #d8d8d8;
+}
+.CoffeeMaker .tabs .tab-link.active {
+  background-color: #ccc;
+}
+.CoffeeMaker .tabs .add-tab-link {
+  float: right;
+  padding: 6px;
+}
+.CoffeeMaker .tabContent {
+  padding: 6px 12px;
+  border: 1px solid #ccc;
+  border-top: none;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+.CoffeeMaker .tabContent .remove-operation {
+  float: right;
+}
+.CoffeeMaker div.row {
+  display: block;
+  margin: 5px 0px;
+}
+.CoffeeMaker div.row div.row-cell {
+  display: inline-block;
+}
+.CoffeeMaker div.row div.row-ceall-label {
+  width: 100px;
+  vertical-align: top;
+}
+.CoffeeMaker div.row div.row-cell-value-textarea {
+  width: 80%;
+}
+.CoffeeMaker div.row div.row-cell-value select,
+.CoffeeMaker div.row div.row-cell-value input,
+.CoffeeMaker div.row div.row-cell-value textarea {
+  border-radius: 4px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border: 1px solid #cccccc;
+  padding: 0px 5px;
+}
+.CoffeeMaker div.row div.row-cell-value select,
+.CoffeeMaker div.row div.row-cell-value input {
+  height: 30px;
+}
+.CoffeeMaker div.row div.row-cell-value textarea {
+  min-height: 30px;
+  resize: vertical;
+}
+.CoffeeMaker div.row div.row-cell-value.row-cell-max-width {
+  width: 85%;
+}
+.CoffeeMaker div.row div.row-cell-value.row-cell-max-width div.cell-content-wrapper {
+  width: 100%;
+  border: 1px solid #cccccc;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  padding: 0px 5px;
+}
+.CoffeeMaker div.row div.row-cell-value.row-cell-max-width div.properties-wrapper {
+  overflow: auto;
+  max-height: 350px;
+}
+.CoffeeMaker div.row div.row-cell-value.row-cell-max-width div.properties-wrapper input {
+  vertical-align: middle;
+  margin-right: 5px;
+}
+.CoffeeMaker div.row div.row-cell-value.row-cell-max-width div.filter-wrapper div.filter-cell {
+  display: inline-block;
+  margin: 5px;
+  width: 180px;
+  text-align: center;
+  vertical-align: middle;
+  /*input[type="checkbox"]{
+                                margin: 0px;
+                            }*/
 }
 
-.cwLayoutNetwork img.networkLegendImage {
-    height: 25px;
-    top: 3px;
-    right: 25px;
+.CoffeeMaker .largeCell {
+  width: 500px;
 }
 
-div.bootstrap-select > div.dropdown-menu {
-    overflow: inherit !important;
+.CoffeeMaker div.row div.row-cell-value.row-cell-max-width div.filter-content {
+  border-bottom: 1px solid #cccccc;
+}
+.CoffeeMaker div.row div.row-cell-value.row-cell-max-width div.header-cell {
+  text-align: center;
+  font-weight: bold;
+}
+.CoffeeMaker div.row div.row-cell-value.row-cell-max-width div.remove-filter-button a.btn-remove-filter {
+  color: #78909c;
+  border-radius: 20px;
+  width: 36px;
+  height: 36px;
+  line-height: 34px;
+  border: 1px solid transparent;
+  background-color: transparent;
+  box-shadow: none;
+  padding: 0px;
+}
+.CoffeeMaker div.row div.row-cell-value.row-cell-max-width div.remove-filter-button a.btn-remove-filter i {
+  color: #78909c;
+}
+.CoffeeMaker div.row div.row-cell-value.row-cell-max-width div.remove-filter-button a.btn-remove-filter:hover {
+  background-color: #00c9b6;
+  border-color: #546e7a;
+}
+.CoffeeMaker div.row div.row-cell-value.row-cell-max-width div.remove-filter-button a.btn-remove-filter:hover i {
+  color: white;
+}
+.CoffeeMaker div.row div.add-filter-button a.btn-add-filter {
+  height: auto;
+  width: auto;
+  margin: 5px;
+  color: white;
 }
 
-.dropdown-menu.open {
-    width:400px;
+.CoffeeMaker div.propertieslist {
+  display: flex;
+  flex-wrap: wrap;
+}
+.CoffeeMaker a.selected {
+  background-color: #00c9b6;
+  border-color: #546e7a;
 }
 
-div.cwLayoutNetworkExpertModeConfig {
-    width: 481px;
-}
-
-div.cwLayoutNetworkExpertModeConfig div.vis-configuration-wrapper {
-    width: 481px;
-}
-
-div.cwLayoutNetworkExpertModeConfig.selected {
-    box-shadow: inset 0 -2px #03a0ce;
-}
-
-div.cwLayoutNetworkExpertModeContainerTab {
-    display: flex;
-}
-
-div.cwLayoutNetworkExpertModeTabs {
-    margin: 5px;
-    transition: box-shadow 0.3s;
-    color: rgba(0, 0, 0, 0.8);
-    display: block;
-    height: 48px;
-    line-height: 48px;
-    padding: 0 1rem;
-    box-shadow: inset 0 -2px #000000;
-    cursor: pointer;
-}
-
-div.cwLayoutNetworkExpertModeTabs.selected {
-    box-shadow: inset 0 -2px #03a0ce;
-}
-
-div.cwLayoutNetworkPhysicsConfig {
-    -ms-transform: scale(0.9, 0.9); /* IE 9 */
-    -webkit-transform: scale(0.9, 0.9); /* Safari */
-    transform: scale(0.9, 0.9);
-}
-
-div.vis-configuration-wrapper {
-}
-
-div.cwLayoutNetworkExpertModeConfig div.vis-configuration.vis-config-button {
-    display: none;
-}
-
-.vis-configuration.vis-config-select {
-    width: auto;
-}
-
-.networkLegendImage {
-    height: 11px;
-    vertical-align: middle;
-}
-
-.cwLayoutNetworkLoadingBartext {
-    top: 17px;
-    left: 11px;
-    position: absolute;
-}
-
-.cwLayoutNetworkOption {
-    right: -17px;
-    position: absolute;
-    width: 400px;
-    display: block;
-    top: 0px;
-    z-index: 100;
-    background-color: transparent;
-}
-
-.cwLayoutNetworkOption .k-button{ 
-    margin: .16em .16em;
-}
-
-.cwLayoutNetworkSearchBox {
-    margin-right : 15px;
-    background-color: transparent;
-}
-
-.cwLayoutNetworkOptionWrapper { 
-    display: flex;
-    background-color: transparent;
-}
-
-.cwLayoutNetworkButtons { 
-    margin-top : 20px;
-    background-color: transparent;
-}
-
-.cwLayoutNetork_filterSection{
-    margin-top: 50px;
-    display: block;
-    background-color: transparent;
-}
-
-
-.nodeConfigurationSaveButton{
-    margin-left: 5px;
-}
-
-.networkAddButton {
-    position: absolute;
-    right: 15px;
-    top: 12px;
-    color: @add-button-green-color !important;
-}
-
-.cwLayoutNetworkToolBox .btn.selected{
-    background-color: @cwTopBarProfileLinkHoverColor;
-}
-
-.cwLayoutNetworkButtons .k-button.selected{
-    background-color: @cwTopBarProfileLinkHoverColor;
-}
-
-
-.networkLoadingElement.fa.fa-circle-o-notch.fa-spin{
-    font-size: 44px;
-}
-
-.cwLayoutNetworkLoadingBartext {
-    top: 17px;
-    left: 11px;
-    position: absolute;
-}
-
-
-.networkLoadingElementWrapper {
-    position: fixed;
-    z-index: 20000;
-    left: 50%;
-    padding: 3px;
-    z-index: 600;
-    color: @cwLoadingIconColor;
-    margin-top: -22px;
-    margin-left: -22px;
-
-}
-
-
-div.LayoutNetork_filterTitle {
-    font-weight: bold;
-    padding-top: 5px;
-    padding-bottom: 1px;
-}
-
-
-div.cwLayout_networkSelect {
-    padding-bottom: 5px;
-}
-
-.cwLayout_networkSelect_menu {
-
-}
-
-.cwLayout_networkSelect_menu:hover {
-
-}
-
-td.cw-edit-property-value input.cwLayout_expertModeAssociationFilterText {
-    width: 80%;
-}
-
-.cwLayout_expertModeAssociationFilterButton {
-    height: 25px;
-}
-
-.cwLayout_expertModeConfigButton {
-    margin-top: 5px;
-}
-
-.cwLayout_expertModeTableSelect {
-    line-height: 0px;
+.CoffeeMaker div.add-first-operation-button a.btn-add-first-operation {
+  height: auto;
+  width: auto;
+  margin: 5px;
+  color: white;
+  border-radius: 5px;
+  padding-left: 5px;
+  padding-right: 5px;
 }
