--- a/src/CoffeeMaker.less
+++ b/src/CoffeeMaker.less
@@ -14,7 +14,7 @@ div.CoffeeMakerTab {
 }
 
 div.CoffeeMakerTab.selected {
-  box-shadow: inset 0 -2px #03a0ce;
+  box-shadow: inset 0 -2px @cwAccordionHeaderBackgroundColor;
 }
 
 div.CoffeeMakerTabs {
@@ -24,7 +24,7 @@ div.CoffeeMakerTabs {
 .CoffeeMaker {
   /* Style the tab content */
 }
-.CoffeeMaker .tabs {
+.CoffeeMaker .CoffeeMakerTabs {
   overflow: hidden;
   border: 1px solid #ccc;
   background-color: #f1f1f1;
@@ -34,7 +34,7 @@ div.CoffeeMakerTabs {
   /* Change background color of buttons on hover */
   /* Create an active/current tablink class */
 }
-.CoffeeMaker .tabs .tab-link {
+.CoffeeMaker .CoffeeMakerTabs .tab-link {
   background-color: inherit;
   float: left;
   border: none;
@@ -44,13 +44,13 @@ div.CoffeeMakerTabs {
   transition: 0.3s;
   font-size: 17px;
 }
-.CoffeeMaker .tabs .tab-link:hover {
+.CoffeeMaker .CoffeeMakerTabs .tab-link:hover {
   background-color: #d8d8d8;
 }
-.CoffeeMaker .tabs .tab-link.active {
+.CoffeeMaker .CoffeeMakerTabs .tab-link.active {
   background-color: #ccc;
 }
-.CoffeeMaker .tabs .add-tab-link {
+.CoffeeMaker .CoffeeMakerTabs .add-tab-link {
   float: right;
   padding: 6px;
 }
@@ -151,17 +151,17 @@ div.CoffeeMakerTabs {
   color: #78909c;
 }
 .CoffeeMaker div.row div.row-cell-value.row-cell-max-width div.remove-filter-button a.btn-remove-filter:hover {
-  background-color: #00c9b6;
-  border-color: #546e7a;
+  background-color: lighten(@cwDiagramBreadCrumbBackgroundColor, 5%);
+  border-color: @cwColor1Shade;
 }
 .CoffeeMaker div.row div.row-cell-value.row-cell-max-width div.remove-filter-button a.btn-remove-filter:hover i {
-  color: white;
+  color: @cwButtonIconColor;
 }
 .CoffeeMaker div.row div.add-filter-button a.btn-add-filter {
   height: auto;
   width: auto;
   margin: 5px;
-  color: white;
+  color: @cwButtonIconColor;
 }
 
 .CoffeeMaker div.propertieslist {
@@ -169,15 +169,15 @@ div.CoffeeMakerTabs {
   flex-wrap: wrap;
 }
 .CoffeeMaker a.selected {
-  background-color: #00c9b6;
-  border-color: #546e7a;
+  background-color: lighten(@cwDiagramBreadCrumbBackgroundColor, 5%);
+  border-color: @cwColor1Shade;
 }
 
 .CoffeeMaker div.add-first-operation-button a.btn-add-first-operation {
   height: auto;
   width: auto;
   margin: 5px;
-  color: white;
+  color: @cwButtonIconColor;
   border-radius: 5px;
   padding-left: 5px;
   padding-right: 5px;
