--- a/src/CoffeeMaker.less
+++ b/src/CoffeeMaker.less
@@ -21,39 +21,10 @@ div.CoffeeMakerTabs {
   display: flex;
 }
 
-.CoffeeMaker {
-  /* Style the tab content */
+.CoffeeMaker .CoffeeMakerTabs .CoffeeMakerTab:hover {
+  box-shadow: inset 0 -2px @cwAccordionHeaderBackgroundColor;
 }
-.CoffeeMaker .CoffeeMakerTabs {
-  overflow: hidden;
-  border: 1px solid #ccc;
-  background-color: #f1f1f1;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-  /* Style the buttons inside the tab */
-  /* Change background color of buttons on hover */
-  /* Create an active/current tablink class */
-}
-.CoffeeMaker .CoffeeMakerTabs .tab-link {
-  background-color: inherit;
-  float: left;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  padding: 14px 16px;
-  transition: 0.3s;
-  font-size: 17px;
-}
-.CoffeeMaker .CoffeeMakerTabs .tab-link:hover {
-  background-color: #d8d8d8;
-}
-.CoffeeMaker .CoffeeMakerTabs .tab-link.active {
-  background-color: #ccc;
-}
-.CoffeeMaker .CoffeeMakerTabs .add-tab-link {
-  float: right;
-  padding: 6px;
-}
+
 .CoffeeMaker .tabContent {
   padding: 6px 12px;
   border: 1px solid #ccc;
@@ -120,9 +91,9 @@ div.CoffeeMakerTabs {
   width: 180px;
   text-align: center;
   vertical-align: middle;
-  /*input[type="checkbox"]{
-                                margin: 0px;
-                            }*/
+  input[type="checkbox"] {
+    margin: 0px;
+  }
 }
 
 .CoffeeMaker .largeCell {
@@ -148,7 +119,7 @@ div.CoffeeMakerTabs {
   padding: 0px;
 }
 .CoffeeMaker div.row div.row-cell-value.row-cell-max-width div.remove-filter-button a.btn-remove-filter i {
-  color: #78909c;
+  color: @cwColor1;
 }
 .CoffeeMaker div.row div.row-cell-value.row-cell-max-width div.remove-filter-button a.btn-remove-filter:hover {
   background-color: lighten(@cwDiagramBreadCrumbBackgroundColor, 5%);
@@ -161,13 +132,14 @@ div.CoffeeMakerTabs {
   height: auto;
   width: auto;
   margin: 5px;
-  color: @cwButtonIconColor;
+  color: @cwHomePageFavoriteTextColor;
 }
 
 .CoffeeMaker div.propertieslist {
   display: flex;
   flex-wrap: wrap;
 }
+
 .CoffeeMaker a.selected {
   background-color: lighten(@cwDiagramBreadCrumbBackgroundColor, 5%);
   border-color: @cwColor1Shade;
