--- a/src/CoffeeMaker.less
+++ b/src/CoffeeMaker.less
@@ -99,7 +99,9 @@ div.CoffeeMakerTabs {
 .CoffeeMaker .largeCell {
   width: 500px;
 }
-
+.CoffeeMaker .smallCell {
+  width:70px;
+}
 .CoffeeMaker div.row div.row-cell-value.row-cell-max-width div.filter-content {
   border-bottom: 1px solid #cccccc;
 }
