check edit model config ok

--- a/src/CoffeeMaker.less
+++ b/src/CoffeeMaker.less
@@ -100,7 +100,7 @@ div.CoffeeMakerTabs {
   width: 500px;
 }
 .CoffeeMaker .smallCell {
-  width:70px;
+  width: 70px;
 }
 .CoffeeMaker div.row div.row-cell-value.row-cell-max-width div.filter-content {
   border-bottom: 1px solid #cccccc;
@@ -155,4 +155,9 @@ div.CoffeeMakerTabs {
   border-radius: 5px;
   padding-left: 5px;
   padding-right: 5px;
+}
+
+.CoffeeMaker .tableCheckbox {
+  width: 40px;
+  text-align: center;
 }
