--- a/src/CoffeeMaker.css
+++ b/src/CoffeeMaker.css
@@ -189,3 +189,8 @@ div.CoffeeMakerTabs {
   width: 100%;
   heigth: 60px;
 }
+
+.CoffeeMaker .tableCheckbox {
+  width: 40px;
+  text-align: center;
+}
