--- a/src/CoffeeMaker.less
+++ b/src/CoffeeMaker.less
@@ -161,3 +161,13 @@ div.CoffeeMakerTabs {
   width: 40px;
   text-align: center;
 }
+
+.CoffeeMaker .tableCheckbox {
+  width: 50px;
+  text-align: center;
+}
+
+.CoffeeMaker .tableName {
+  width: 150px;
+  text-align: center;
+}
