--- a/src/customDisplayStringEnhanced/cdsEnhanced.css
+++ b/src/customDisplayStringEnhanced/cdsEnhanced.css
@@ -1,5 +1,35 @@
-span.cdsEnhancedDiagramPopOutIcon:hover{
- cursor: pointer;
+/* GLOBAL */
+/* LOGIN */
+/* DIAGRAM */
+/* HOME PAGE */
+/* MENU LEFT */
+/* MAIN MENU */
+/* SUB MENU */
+/* PAGE TAB */
+/* DROPDOWN NOTIFICATIONS */
+/* SOCIAL */
+/* LIST BOX */
+/* PROPERTIES GROUP */
+/* BUTTONS */
+/* PAGE ACTIONS */
+/* ACCORDIONS */
+/* DISCUSSIONS */
+/* WORLD MAP */
+/* USER ZONE */
+/* POPUP */
+/* BADGES */
+/* TASKS & NOTIFICATIONS */
+/* GLOBAL SEARCH */
+/* TOP BAR */
+/* GRID */
+/* DIAGRAM TILE */
+/* MATRIX ADVANCED */
+span.cdsEnhancedDiagramPopOutIcon:hover {
+  cursor: pointer;
+}
+li.ot-cw_user {
+  width: 100%;
+  text-align: left;
 }
 div.page-title > div {
   vertical-align: top;
