--- a/src/duplicateButton/duplicate.css
+++ b/src/duplicateButton/duplicate.css
@@ -1,15 +1,13 @@
 .duplicateNavigateButton {
-    background-color: #009688;
-    color: #FFFFFF;
-    border: 1px solid #00635a;
-    padding: 8px;
-    box-shadow: 1px 1px 1px #BDBDBD;
-    margin: 50px;
-    border-radius: 5px;
-    display: block;
+  background-color: #009688;
+  color: #ffffff;
+  border: 1px solid #00635a;
+  padding: 8px;
+  box-shadow: 1px 1px 1px #bdbdbd;
+  margin: 50px;
+  border-radius: 5px;
+  display: block;
 }
-
 .duplicatePopOut {
-
-    display: block;
+  display: block;
 }
