--- a/src/CoffeeMaker.css
+++ b/src/CoffeeMaker.css
@@ -1,4 +1,30 @@
-div.CoffeeMakerTab {
+/* GLOBAL */
+/* LOGIN */
+/* DIAGRAM */
+/* HOME PAGE */
+/* MENU LEFT */
+/* MAIN MENU */
+/* SUB MENU */
+/* PAGE TAB */
+/* DROPDOWN NOTIFICATIONS */
+/* SOCIAL */
+/* LIST BOX */
+/* PROPERTIES GROUP */
+/* BUTTONS */
+/* PAGE ACTIONS */
+/* ACCORDIONS */
+/* DISCUSSIONS */
+/* WORLD MAP */
+/* USER ZONE */
+/* POPUP */
+/* BADGES */
+/* TASKS & NOTIFICATIONS */
+/* GLOBAL SEARCH */
+/* TOP BAR */
+/* GRID */
+/* DIAGRAM TILE */
+/* MATRIX ADVANCED */
+.CoffeeMaker .CoffeeMakerTab {
   margin: 5px;
   transition: box-shadow 0.3s;
   color: rgba(0, 0, 0, 0.8);
@@ -9,17 +35,14 @@ div.CoffeeMakerTab {
   box-shadow: inset 0 -2px #000000;
   cursor: pointer;
 }
-
-div.CoffeeMakerTab.selected {
+.CoffeeMaker .CoffeeMakerTab.selected {
   box-shadow: inset 0 -2px #03a0ce;
 }
-
-div.CoffeeMakerTabs {
+.CoffeeMaker .CoffeeMakerTabs {
   display: flex;
 }
-
-.CoffeeMaker {
-  /* Style the tab content */
+.CoffeeMaker .CoffeeMakerTabs .CoffeeMakerTab:hover {
+  box-shadow: inset 0 -2px #03a0ce;
 }
 .CoffeeMaker .tabs {
   overflow: hidden;
@@ -27,9 +50,6 @@ div.CoffeeMakerTabs {
   background-color: #f1f1f1;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
-  /* Style the buttons inside the tab */
-  /* Change background color of buttons on hover */
-  /* Create an active/current tablink class */
 }
 .CoffeeMaker .tabs .tab-link {
   background-color: inherit;
@@ -75,24 +95,31 @@ div.CoffeeMakerTabs {
 .CoffeeMaker div.row div.row-cell-value-textarea {
   width: 80%;
 }
-.CoffeeMaker div.row div.row-cell-value select,
-.CoffeeMaker div.row div.row-cell-value input,
+.CoffeeMaker div.row div.row-cell-value select {
+  border-radius: 4px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border: 1px solid #cccccc;
+  padding: 0px 5px;
+  height: 30px;
+}
+.CoffeeMaker div.row div.row-cell-value input {
+  border-radius: 4px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border: 1px solid #cccccc;
+  padding: 0px 5px;
+  height: 30px;
+}
 .CoffeeMaker div.row div.row-cell-value textarea {
   border-radius: 4px;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border: 1px solid #cccccc;
   padding: 0px 5px;
-}
-.CoffeeMaker div.row div.row-cell-value select,
-.CoffeeMaker div.row div.row-cell-value input {
-  height: 30px;
-}
-.CoffeeMaker div.row div.row-cell-value textarea {
   min-height: 30px;
   resize: vertical;
 }
-
 .CoffeeMaker div.row div.row-cell-value.row-cell-max-width {
   width: 85%;
 }
@@ -118,19 +145,10 @@ div.CoffeeMakerTabs {
   width: 180px;
   text-align: center;
   vertical-align: middle;
-  /*input[type="checkbox"]{
-                                margin: 0px;
-                            }*/
 }
-
-.CoffeeMaker .largeCell {
-  width: 500px;
+.CoffeeMaker div.row div.row-cell-value.row-cell-max-width div.filter-wrapper div.filter-cell input[type="checkbox"] {
+  margin: 0px;
 }
-
-.CoffeeMaker .smallCell {
-  width: 70px;
-}
-
 .CoffeeMaker div.row div.row-cell-value.row-cell-max-width div.filter-content {
   border-bottom: 1px solid #cccccc;
 }
@@ -150,51 +168,67 @@ div.CoffeeMakerTabs {
   padding: 0px;
 }
 .CoffeeMaker div.row div.row-cell-value.row-cell-max-width div.remove-filter-button a.btn-remove-filter i {
-  color: #78909c;
+  color: #03a0ce;
 }
 .CoffeeMaker div.row div.row-cell-value.row-cell-max-width div.remove-filter-button a.btn-remove-filter:hover {
-  background-color: #00c9b6;
+  background-color: #03b4e7;
   border-color: #546e7a;
 }
 .CoffeeMaker div.row div.row-cell-value.row-cell-max-width div.remove-filter-button a.btn-remove-filter:hover i {
-  color: white;
+  color: #03a0ce;
 }
 .CoffeeMaker div.row div.add-filter-button a.btn-add-filter {
   height: auto;
   width: auto;
   margin: 5px;
-  color: white;
+  color: #ffffff;
 }
-
+.CoffeeMaker .largeCell {
+  width: 500px;
+}
+.CoffeeMaker .largeMediumCell {
+  width: 250px;
+}
+.CoffeeMaker .mediumCell {
+  width: 150px;
+}
+.CoffeeMaker .smallCell {
+  width: 70px;
+}
+.CoffeeMaker div.cwPropertiesTableContainer.nolimit {
+  width: auto;
+  max-width: fit-content;
+  border-collapse: collapse;
+}
+.CoffeeMaker div.cwPropertiesTableContainer.nolimit a {
+  height: auto;
+  width: auto;
+  margin: 5px;
+}
+.CoffeeMaker div.cwPropertiesTableContainer.nolimit td select {
+  height: 30px;
+}
 .CoffeeMaker div.propertieslist {
   display: flex;
   flex-wrap: wrap;
 }
 .CoffeeMaker a.selected {
-  background-color: #00c9b6;
+  background-color: #03b4e7;
   border-color: #546e7a;
 }
-
 .CoffeeMaker div.add-first-operation-button a.btn-add-first-operation {
   height: auto;
   width: auto;
   margin: 5px;
-  color: white;
+  color: #03a0ce;
   border-radius: 5px;
   padding-left: 5px;
   padding-right: 5px;
 }
-
-.CoffeeMaker .giantTextBox {
-  width: 100%;
-  heigth: 60px;
-}
-
 .CoffeeMaker .tableCheckbox {
-  width: 50px;
+  width: 60px;
   text-align: center;
 }
-
 .CoffeeMaker .tableName {
   width: 150px;
   text-align: center;
