--- a/src/CoffeeMaker.less
+++ b/src/CoffeeMaker.less
@@ -1,205 +1,230 @@
 @import "../../_mixins";
 @import "../../_variables";
 
-div.CoffeeMakerTab {
-  margin: 5px;
-  transition: box-shadow 0.3s;
-  color: rgba(0, 0, 0, 0.8);
-  display: block;
-  height: 48px;
-  line-height: 48px;
-  padding: 0 1rem;
-  box-shadow: inset 0 -2px #000000;
-  cursor: pointer;
-}
-
-div.CoffeeMakerTab.selected {
-  box-shadow: inset 0 -2px @cwAccordionHeaderBackgroundColor;
-}
-
-div.CoffeeMakerTabs {
-  display: flex;
-}
-
-.CoffeeMaker .CoffeeMakerTabs .CoffeeMakerTab:hover {
-  box-shadow: inset 0 -2px @cwAccordionHeaderBackgroundColor;
-}
-
-.CoffeeMaker .tabs {
-  overflow: hidden;
-  border: 1px solid #ccc;
-  background-color: #f1f1f1;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-  /* Style the buttons inside the tab */
-  /* Change background color of buttons on hover */
-  /* Create an active/current tablink class */
-}
-
-.CoffeeMaker .tabs .tab-link {
-  background-color: inherit;
-  float: left;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  padding: 14px 16px;
-  transition: 0.3s;
-  font-size: 17px;
-}
-.CoffeeMaker .tabs .tab-link:hover {
-  background-color: #d8d8d8;
-}
-.CoffeeMaker .tabs .tab-link.active {
-  background-color: #ccc;
-}
-.CoffeeMaker .tabs .add-tab-link {
-  float: right;
-  padding: 6px;
-}
-.CoffeeMaker .tabContent {
-  padding: 6px 12px;
-  border: 1px solid #ccc;
-  border-top: none;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
-}
-.CoffeeMaker .tabContent .remove-operation {
-  float: right;
-}
-
-.CoffeeMaker div.row {
-  display: block;
-  margin: 5px 0px;
-}
-.CoffeeMaker div.row div.row-cell {
-  display: inline-block;
-}
-.CoffeeMaker div.row div.row-ceall-label {
-  width: 100px;
-  vertical-align: top;
-}
-.CoffeeMaker div.row div.row-cell-value-textarea {
-  width: 80%;
-}
-.CoffeeMaker div.row div.row-cell-value select,
-.CoffeeMaker div.row div.row-cell-value input,
-.CoffeeMaker div.row div.row-cell-value textarea {
-  border-radius: 4px;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border: 1px solid #cccccc;
-  padding: 0px 5px;
-}
-.CoffeeMaker div.row div.row-cell-value select,
-.CoffeeMaker div.row div.row-cell-value input {
-  height: 30px;
-}
-.CoffeeMaker div.row div.row-cell-value textarea {
-  min-height: 30px;
-  resize: vertical;
-}
-.CoffeeMaker div.row div.row-cell-value.row-cell-max-width {
-  width: 85%;
-}
-.CoffeeMaker div.row div.row-cell-value.row-cell-max-width div.cell-content-wrapper {
-  width: 100%;
-  border: 1px solid #cccccc;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
-  padding: 0px 5px;
-}
-.CoffeeMaker div.row div.row-cell-value.row-cell-max-width div.properties-wrapper {
-  overflow: auto;
-  max-height: 350px;
-}
-.CoffeeMaker div.row div.row-cell-value.row-cell-max-width div.properties-wrapper input {
-  vertical-align: middle;
-  margin-right: 5px;
-}
-.CoffeeMaker div.row div.row-cell-value.row-cell-max-width div.filter-wrapper div.filter-cell {
-  display: inline-block;
-  margin: 5px;
-  width: 180px;
-  text-align: center;
-  vertical-align: middle;
-  input[type="checkbox"] {
-    margin: 0px;
+.CoffeeMaker {
+  .CoffeeMakerTab {
+    margin: 5px;
+    transition: box-shadow 0.3s;
+    color: rgba(0, 0, 0, 0.8);
+    display: block;
+    height: 48px;
+    line-height: 48px;
+    padding: 0 1rem;
+    box-shadow: inset 0 -2px #000000;
+    cursor: pointer;
   }
-}
+  .CoffeeMakerTab.selected {
+    box-shadow: inset 0 -2px @cwAccordionHeaderBackgroundColor;
+  }
+  .CoffeeMakerTabs {
+    display: flex;
+    .CoffeeMakerTab {
+      &:hover {
+        box-shadow: inset 0 -2px @cwAccordionHeaderBackgroundColor;
+      }
+    }
+  }
+  .tabs {
+    overflow: hidden;
+    border: 1px solid #ccc;
+    background-color: #f1f1f1;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    .tab-link {
+      background-color: inherit;
+      float: left;
+      border: none;
+      outline: none;
+      cursor: pointer;
+      padding: 14px 16px;
+      transition: 0.3s;
+      font-size: 17px;
+      &:hover {
+        background-color: #d8d8d8;
+      }
+    }
+    .tab-link.active {
+      background-color: #ccc;
+    }
+    .add-tab-link {
+      float: right;
+      padding: 6px;
+    }
+  }
+  .tabContent {
+    padding: 6px 12px;
+    border: 1px solid #ccc;
+    border-top: none;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    .remove-operation {
+      float: right;
+    }
+  }
+  div.row {
+    display: block;
+    margin: 5px 0px;
+    div.row-cell {
+      display: inline-block;
+    }
+    div.row-ceall-label {
+      width: 100px;
+      vertical-align: top;
+    }
+    div.row-cell-value-textarea {
+      width: 80%;
+    }
+    div.row-cell-value {
+      select {
+        border-radius: 4px;
+        -webkit-border-radius: 4px;
+        -moz-border-radius: 4px;
+        border: 1px solid #cccccc;
+        padding: 0px 5px;
+        height: 30px;
+      }
+      input {
+        border-radius: 4px;
+        -webkit-border-radius: 4px;
+        -moz-border-radius: 4px;
+        border: 1px solid #cccccc;
+        padding: 0px 5px;
+        height: 30px;
+      }
+      textarea {
+        border-radius: 4px;
+        -webkit-border-radius: 4px;
+        -moz-border-radius: 4px;
+        border: 1px solid #cccccc;
+        padding: 0px 5px;
+        min-height: 30px;
+        resize: vertical;
+      }
+    }
+    div.row-cell-value.row-cell-max-width {
+      width: 85%;
+      div.cell-content-wrapper {
+        width: 100%;
+        border: 1px solid #cccccc;
+        -webkit-border-radius: 4px;
+        -moz-border-radius: 4px;
+        border-radius: 4px;
+        padding: 0px 5px;
+      }
+      div.properties-wrapper {
+        overflow: auto;
+        max-height: 350px;
+        input {
+          vertical-align: middle;
+          margin-right: 5px;
+        }
+      }
+      div.filter-wrapper {
+        div.filter-cell {
+          display: inline-block;
+          margin: 5px;
+          width: 180px;
+          text-align: center;
+          vertical-align: middle;
+          input[type="checkbox"] {
+            margin: 0px;
+          }
+        }
+      }
+      div.filter-content {
+        border-bottom: 1px solid #cccccc;
+      }
+      div.header-cell {
+        text-align: center;
+        font-weight: bold;
+      }
+      div.remove-filter-button {
+        a.btn-remove-filter {
+          color: #78909c;
+          border-radius: 20px;
+          width: 36px;
+          height: 36px;
+          line-height: 34px;
+          border: 1px solid transparent;
+          background-color: transparent;
+          box-shadow: none;
+          padding: 0px;
+          i {
+            color: @cwColor1;
+          }
+          &:hover {
+            background-color: lighten(@cwDiagramBreadCrumbBackgroundColor, 5%);
+            border-color: @cwColor1Shade;
+            i {
+              color: @cwButtonIconColor;
+            }
+          }
+        }
+      }
+    }
+    div.add-filter-button {
+      a.btn-add-filter {
+        height: auto;
+        width: auto;
+        margin: 5px;
+        color: @cwHomePageFavoriteTextColor;
+      }
+    }
+  }
+  .largeCell {
+    width: 500px;
+  }
+  .largeMediumCell {
+    width: 250px;
+  }
+  .mediumCell {
+    width: 150px;
+  }
+  .smallCell {
+    width: 70px;
+  }
+  div.cwPropertiesTableContainer.nolimit {
+    width: auto;
+    max-width: fit-content;
+    border-collapse: collapse;
+    a {
+      height: auto;
+      width: auto;
+      margin: 5px;
+    }
 
-.CoffeeMaker .largeCell {
-  width: 500px;
-}
-.CoffeeMaker .smallCell {
-  width: 70px;
-}
-.CoffeeMaker div.row div.row-cell-value.row-cell-max-width div.filter-content {
-  border-bottom: 1px solid #cccccc;
-}
-.CoffeeMaker div.row div.row-cell-value.row-cell-max-width div.header-cell {
-  text-align: center;
-  font-weight: bold;
-}
-.CoffeeMaker div.row div.row-cell-value.row-cell-max-width div.remove-filter-button a.btn-remove-filter {
-  color: #78909c;
-  border-radius: 20px;
-  width: 36px;
-  height: 36px;
-  line-height: 34px;
-  border: 1px solid transparent;
-  background-color: transparent;
-  box-shadow: none;
-  padding: 0px;
-}
-.CoffeeMaker div.row div.row-cell-value.row-cell-max-width div.remove-filter-button a.btn-remove-filter i {
-  color: @cwColor1;
-}
-.CoffeeMaker div.row div.row-cell-value.row-cell-max-width div.remove-filter-button a.btn-remove-filter:hover {
-  background-color: lighten(@cwDiagramBreadCrumbBackgroundColor, 5%);
-  border-color: @cwColor1Shade;
-}
-.CoffeeMaker div.row div.row-cell-value.row-cell-max-width div.remove-filter-button a.btn-remove-filter:hover i {
-  color: @cwButtonIconColor;
-}
-.CoffeeMaker div.row div.add-filter-button a.btn-add-filter {
-  height: auto;
-  width: auto;
-  margin: 5px;
-  color: @cwHomePageFavoriteTextColor;
-}
+    td {
+      select {
+        height: 30px;
+      }
+    }
+  }
+  div.propertieslist {
+    display: flex;
+    flex-wrap: wrap;
+  }
 
-.CoffeeMaker div.propertieslist {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.CoffeeMaker a.selected {
-  background-color: lighten(@cwDiagramBreadCrumbBackgroundColor, 5%);
-  border-color: @cwColor1Shade;
-}
-
-.CoffeeMaker div.add-first-operation-button a.btn-add-first-operation {
-  height: auto;
-  width: auto;
-  margin: 5px;
-  color: @cwButtonIconColor;
-  border-radius: 5px;
-  padding-left: 5px;
-  padding-right: 5px;
-}
-
-.CoffeeMaker .tableCheckbox {
-  width: 40px;
-  text-align: center;
-}
-
-.CoffeeMaker .tableCheckbox {
-  width: 50px;
-  text-align: center;
-}
-
-.CoffeeMaker .tableName {
-  width: 150px;
-  text-align: center;
+  a.selected {
+    background-color: lighten(@cwDiagramBreadCrumbBackgroundColor, 5%);
+    border-color: @cwColor1Shade;
+  }
+  div.add-first-operation-button {
+    a.btn-add-first-operation {
+      height: auto;
+      width: auto;
+      margin: 5px;
+      color: @cwButtonIconColor;
+      border-radius: 5px;
+      padding-left: 5px;
+      padding-right: 5px;
+    }
+  }
+  .tableCheckbox {
+    width: 60px;
+    text-align: center;
+  }
+  .tableName {
+    width: 150px;
+    text-align: center;
+  }
 }
