--- a/src/CoffeeMaker.less
+++ b/src/CoffeeMaker.less
@@ -79,8 +79,11 @@
       display: inline-block;
     }
     div.row-cell-label {
-      width: 100px;
+      max-width: 400px;
       vertical-align: top;
+      font-size: large;
+      font-weight: 700;
+      color: @cwAccordionHeaderBackgroundColor;
     }
     div.row-cell-value-textarea {
       width: 80%;
