--- a/src/homePage/homePage.less
+++ b/src/homePage/homePage.less
@@ -1,29 +1,36 @@
 .lastUpdateObjectsTable {
   width: 50%;
   margin: 20px;
-}
 
-.lastUpdateObjectsTable table.cwPropertiesTable td {
-  width: inherit;
-}
-.homePageDate {
-  float: right;
-}
+  table.cwPropertiesTable td {
+    width: inherit;
+  }
 
-.lastUpdateObjectsTable .filterDate {
-  border-width: 0px 1px 1px;
-  border-style: solid;
-  border-color: rgb(191, 191, 191);
-  border-image: initial;
-  padding: 5px;
-  white-space: pre-wrap;
-  word-break: break-word;
-  overflow-wrap: break-word;
-  overflow: hidden;
-  border-radius: 6px;
-  border: 1px solid rgba(0, 0, 0, 0.2);
-}
+  .see_more_link {
+    float: right;
+    text-decoration: underline;
 
-.lastUpdateObjectsTable .smallCell {
-  width: 60px;
+    line-height: 33px;
+  }
+  .homePageDate {
+    float: right;
+  }
+
+  .filterDate {
+    border-width: 0px 1px 1px;
+    border-style: solid;
+    border-color: rgb(191, 191, 191);
+    border-image: initial;
+    padding: 5px;
+    white-space: pre-wrap;
+    word-break: break-word;
+    overflow-wrap: break-word;
+    overflow: hidden;
+    border-radius: 6px;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+  }
+
+  .smallCell {
+    width: 60px;
+  }
 }
