--- a/src/CoffeeMaker.css
+++ b/src/CoffeeMaker.css
@@ -161,54 +161,35 @@
   vertical-align: middle;
   margin-right: 5px;
 }
-.CoffeeMaker div.row div.row-cell-value.row-cell-max-width div.filter-wrapper div.filter-cell,
-.CoffeeMaker div.rowFlex div.row-cell-value.row-cell-max-width div.filter-wrapper div.filter-cell {
-  display: inline-block;
-  margin: 5px;
+.CoffeeMaker div.row div.row-cell-value.row-cell-max-width .filter-wrapper .filter-content,
+.CoffeeMaker div.rowFlex div.row-cell-value.row-cell-max-width .filter-wrapper .filter-content {
   width: 180px;
+}
+.CoffeeMaker div.row div.row-cell-value.row-cell-max-width .filter-wrapper .filter-value,
+.CoffeeMaker div.rowFlex div.row-cell-value.row-cell-max-width .filter-wrapper .filter-value {
+  width: 180px;
+}
+.CoffeeMaker div.row div.row-cell-value.row-cell-max-width .filter-wrapper .filter-operator,
+.CoffeeMaker div.rowFlex div.row-cell-value.row-cell-max-width .filter-wrapper .filter-operator {
+  width: 100px;
+}
+.CoffeeMaker div.row div.row-cell-value.row-cell-max-width .filter-wrapper .filter-cell,
+.CoffeeMaker div.rowFlex div.row-cell-value.row-cell-max-width .filter-wrapper .filter-cell {
+  margin: 5px;
   text-align: center;
   vertical-align: middle;
 }
-.CoffeeMaker div.row div.row-cell-value.row-cell-max-width div.filter-wrapper div.filter-cell input[type="checkbox"],
-.CoffeeMaker div.rowFlex div.row-cell-value.row-cell-max-width div.filter-wrapper div.filter-cell input[type="checkbox"] {
+.CoffeeMaker div.row div.row-cell-value.row-cell-max-width .filter-wrapper .filter-cell input[type="checkbox"],
+.CoffeeMaker div.rowFlex div.row-cell-value.row-cell-max-width .filter-wrapper .filter-cell input[type="checkbox"] {
   margin: 0px;
 }
-.CoffeeMaker div.row div.row-cell-value.row-cell-max-width div.filter-content,
-.CoffeeMaker div.rowFlex div.row-cell-value.row-cell-max-width div.filter-content {
-  border-bottom: 1px solid #cccccc;
-}
-.CoffeeMaker div.row div.row-cell-value.row-cell-max-width div.header-cell,
-.CoffeeMaker div.rowFlex div.row-cell-value.row-cell-max-width div.header-cell {
+.CoffeeMaker div.row div.row-cell-value.row-cell-max-width .header-cell,
+.CoffeeMaker div.rowFlex div.row-cell-value.row-cell-max-width .header-cell {
   text-align: center;
   font-weight: bold;
 }
-.CoffeeMaker div.row div.row-cell-value.row-cell-max-width div.remove-filter-button a.btn-remove-filter,
-.CoffeeMaker div.rowFlex div.row-cell-value.row-cell-max-width div.remove-filter-button a.btn-remove-filter {
-  color: #78909c;
-  border-radius: 20px;
-  width: 36px;
-  height: 36px;
-  line-height: 34px;
-  border: 1px solid transparent;
-  background-color: transparent;
-  box-shadow: none;
-  padding: 0px;
-}
-.CoffeeMaker div.row div.row-cell-value.row-cell-max-width div.remove-filter-button a.btn-remove-filter i,
-.CoffeeMaker div.rowFlex div.row-cell-value.row-cell-max-width div.remove-filter-button a.btn-remove-filter i {
-  color: #03a0ce;
-}
-.CoffeeMaker div.row div.row-cell-value.row-cell-max-width div.remove-filter-button a.btn-remove-filter:hover,
-.CoffeeMaker div.rowFlex div.row-cell-value.row-cell-max-width div.remove-filter-button a.btn-remove-filter:hover {
-  background-color: #03b4e7;
-  border-color: #546e7a;
-}
-.CoffeeMaker div.row div.row-cell-value.row-cell-max-width div.remove-filter-button a.btn-remove-filter:hover i,
-.CoffeeMaker div.rowFlex div.row-cell-value.row-cell-max-width div.remove-filter-button a.btn-remove-filter:hover i {
-  color: #03a0ce;
-}
-.CoffeeMaker div.row div.add-filter-button a.btn-add-filter,
-.CoffeeMaker div.rowFlex div.add-filter-button a.btn-add-filter {
+.CoffeeMaker div.row .add-filter-button a.btn-add-filter,
+.CoffeeMaker div.rowFlex .add-filter-button a.btn-add-filter {
   height: auto;
   width: auto;
   margin: 5px;
