--- a/src/actionOnObjectPage/actionOnObjectPage.css
+++ b/src/actionOnObjectPage/actionOnObjectPage.css
@@ -1,4 +1,6 @@
 div.CwPropertiesLayoutHelpText img {
   vertical-align: middle;
-  margin-right: 30px;
+}
+div.CwPropertiesLayoutHelpText div {
+  display: contents;
 }
