--- a/src/actionOnObjectPage/actionOnObjectPage.less
+++ b/src/actionOnObjectPage/actionOnObjectPage.less
@@ -1,6 +1,8 @@
 div.CwPropertiesLayoutHelpText {
   img {
     vertical-align: middle;
-    margin-right: 30px;
+  }
+  div {
+    display: contents;
   }
 }
