--- a/src/homePage/homePage.less
+++ b/src/homePage/homePage.less
@@ -1,11 +1,13 @@
 .lastUpdateObjectsTable {
   width: 50%;
   margin: 20px;
-
+  background: transparent;
   table.cwPropertiesTable td {
     width: inherit;
   }
-
+  div.cwPropertiesTableHeader {
+    background: inherit;
+  }
   .see_more_link {
     float: right;
     text-decoration: underline;
@@ -33,4 +35,12 @@
   .smallCell {
     width: 60px;
   }
+}
+
+.homePageFav_newImage {
+  position: absolute;
+  display: none;
+  max-width: 30px;
+  bottom: 2px;
+  left: 2px;
 }
