--- a/src/homePage/homePage.less
+++ b/src/homePage/homePage.less
@@ -6,12 +6,11 @@
     width: inherit;
   }
   div.cwPropertiesTableHeader {
-    background: inherit;
+    display: flex;
+    justify-content: space-between;
   }
   .see_more_link {
-    float: right;
     text-decoration: underline;
-
     line-height: 33px;
   }
   .homePageDate {
