--- a/src/homePage/homePage.less
+++ b/src/homePage/homePage.less
@@ -1,3 +1,6 @@
+@import "../../_mixins";
+@import "../../_variables";
+
 .lastUpdateObjectsTable {
   width: 50%;
   margin: 20px;
@@ -42,4 +45,68 @@
   max-width: 30px;
   bottom: 2px;
   left: 2px;
+}
+
+.homePage_main {
+  display: flex;
+  width: 100%;
+
+  ::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+  }
+
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+  }
+
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: @cwDiagramBreadCrumbBackgroundColor;
+  }
+
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: darken(@cwDiagramBreadCrumbBackgroundColor, 10%);
+  }
+
+  .homePage_column {
+    display: flex;
+    flex-wrap: wrap;
+
+    .homePage_display {
+      margin: 5px;
+      .homePage_evolveView {
+        overflow: auto;
+        height: inherit;
+        .tableForPopoutWrapper {
+          overflow: unset;
+        }
+        li.cw-accordion-container {
+          margin: 5px;
+        }
+        ul.cw-diagram-zone {
+          width: calc(100% - 7px);
+          height: calc(100% - 10px);
+          li.cw-diagram-zone {
+            margin: 0;
+            border: 0px solid;
+          }
+          .cwDiagramCamera,
+          .cwDiagramBreadcrumb {
+            display: none;
+          }
+          #cw-dv-fullscreen {
+            display: flex;
+          }
+        }
+      }
+
+      .homePage_description {
+        width: 100%;
+        height: 100%;
+      }
+    }
+  }
 }
