--- a/src/homePage/homePage.css
+++ b/src/homePage/homePage.css
@@ -58,6 +58,10 @@
 .homePage_main .homePage_column .homePage_display {
   margin: 5px;
 }
+.homePage_main .homePage_column .homePage_display .homePage_display_content {
+  transition: height 0.42s ease-out;
+  overflow: hidden;
+}
 .homePage_main .homePage_column .homePage_display .homePage_evolveView {
   overflow: auto;
   height: inherit;
@@ -82,6 +86,58 @@
 }
 .homePage_main .homePage_column .homePage_display .homePage_evolveView ul.cw-diagram-zone #cw-dv-fullscreen {
   display: flex;
+}
+.homePage_main .homePage_column .homePage_display .homePage_links_in_bloc {
+  margin: 5px;
+  background: transparent;
+  display: flex;
+  flex-wrap: wrap;
+  overflow: hidden;
+  height: inherit;
+}
+.homePage_main .homePage_column .homePage_display .homePage_links_in_bloc .linkBox {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 10px;
+}
+.homePage_main .homePage_column .homePage_display .homePage_links_in_bloc .linkBox .link {
+  font-size: 18px;
+  width: 100%;
+  margin-top: 5px;
+  border-top: 2px solid #03a0ce;
+  font-weight: bold;
+  vertical-align: middle;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+}
+.homePage_main .homePage_column .homePage_display .homePage_links_in_bloc .linkBox img {
+  width: 100%;
+  height: 100%;
+}
+.homePage_main .homePage_column .homePage_display .homePage_links_in_bloc .linkBox .backgroundBlur {
+  position: absolute;
+  overflow: hidden;
+  z-index: -20;
+  padding-top: 20px;
+  width: inherit;
+}
+.homePage_main .homePage_column .homePage_display .homePage_links_in_bloc .linkBox .backgroundBlur img {
+  width: inherit;
+  height: 100%;
+  filter: blur(20px) brightness(50%);
+}
+.homePage_main .homePage_column .homePage_display .homePage_links_in_bloc .linkBox:hover {
+  background-color: #03a0ce;
+  color: #ffffff;
+  border: 2px solid #03a0ce;
+  box-sizing: border-box;
+}
+.homePage_main .homePage_column .homePage_display .homePage_links_in_bloc .linkBox:hover img {
+  background-color: #ffffff;
 }
 .homePage_main .homePage_column .homePage_display .homePage_last_modified_object {
   margin: 5px;
