--- a/src/homePage/homePage.less
+++ b/src/homePage/homePage.less
@@ -40,6 +40,10 @@
     .homePage_display {
       margin: 5px;
 
+      .cwPropertiesTableHeader span.homePage_display_title {
+        font-size: 24px;
+      }
+
       .homePage_display_content {
         transition: height 0.42s ease-out;
         overflow: hidden;
@@ -167,9 +171,16 @@
         }
       }
 
+      .homePage_blocks {
+        overflow: auto;
+        height: inherit;
+      }
+
       .homePage_description {
         width: 100%;
         height: 100%;
+        overflow: auto;
+        height: inherit;
       }
     }
   }
