--- a/src/homePage/homePage.less
+++ b/src/homePage/homePage.less
@@ -60,8 +60,8 @@
           margin: 5px;
         }
         ul.cw-diagram-zone {
-          width: calc(100% - 7px);
-          height: calc(100% - 10px);
+          width: 100%;
+          height: 100%;
           li.cw-diagram-zone {
             margin: 0;
             border: 0px solid;
