--- a/src/CoffeeMaker.less
+++ b/src/CoffeeMaker.less
@@ -234,4 +234,8 @@
     width: 150px;
     text-align: center;
   }
+
+  .cwPropertiesTable .cw-edit-property-value {
+    white-space: initial;
+  }
 }
