--- a/src/CoffeeMaker.less
+++ b/src/CoffeeMaker.less
@@ -18,6 +18,7 @@
   }
   .CoffeeMakerTabs {
     display: flex;
+    flex-wrap: wrap;
     .CoffeeMakerTab {
       &:hover {
         box-shadow: inset 0 -2px @cwJVectorMapPathFilledBackgroundColor;
