tablecomplexe : change topbar colors

--- a/src/TableComplexeEnhanced/tableComplexeEnhanced.css
+++ b/src/TableComplexeEnhanced/tableComplexeEnhanced.css
@@ -35,3 +35,7 @@ a.k-button.k-button-icontext.k-grid-popoutitem {
   min-width: 30px;
   color: #03a0ce;
 }
+div.k-header.k-grid-toolbar {
+  background: #03a0ce;
+  color: #ffffff;
+}
