--- a/src/TableComplexeEnhanced/tableComplexeEnhanced.less
+++ b/src/TableComplexeEnhanced/tableComplexeEnhanced.less
@@ -13,3 +13,7 @@ a.k-button.k-button-icontext.k-grid-popoutitem {
   min-width: 30px;
   color: @cwGridButtonsColor;
 }
+div.k-header.k-grid-toolbar {
+  background: @cwGridButtonsColor;
+  color: #ffffff;
+}
