--- a/src/TableComplexeEnhanced/tableComplexeEnhanced.less
+++ b/src/TableComplexeEnhanced/tableComplexeEnhanced.less
@@ -17,3 +17,18 @@ div.k-header.k-grid-toolbar {
   background: @cwGridButtonsColor;
   color: #ffffff;
 }
+
+.k-button.k-button-icontext {
+  i.fa,
+  .k-icon.k-i-plus {
+    color: @cwGridButtonsColor;
+  }
+}
+
+.k-grid-header th.k-header {
+  vertical-align: top;
+}
+.k-grid.k-widget {
+  border-top: 0px;
+  overflow: hidden;
+}
