--- a/src/diagram/cwHtml5DiagramFilter.css
+++ b/src/diagram/cwHtml5DiagramFilter.css
@@ -38,19 +38,19 @@
 }
 .cw-diagram-filter-container .buttonTd {
   width: 30px;
+  height: 30px;
   text-align: center;
-  color: #808080;
 }
 .cw-diagram-filter-container .buttonTd i.active {
-  color: #e91b2b;
+  color: #03a0ce;
 }
 .cw-diagram-filter-container .cwPropertiesTableHeader i.fa {
   float: right;
   font-size: 20px;
-  color: #e91b2b;
+  color: #03a0ce;
 }
 .cw-diagram-filter-container .filterableRegion i {
-  color: #e91b2b;
+  color: #03a0ce;
   float: right;
 }
 .cw-diagram-filter-container i.buttonTd {
@@ -65,7 +65,8 @@
 }
 .cw-diagram-filter-container .filterDiagram table.cw-grid th {
   background-color: #03a0ce;
-  color: #e91b2b;
+  color: #fff;
+  height: 30px;
 }
 .cw-diagram-filter-container .filterDiagram table.cw-grid tbody tr td:last-child {
   border-right: 1px solid #03a0ce;
@@ -138,9 +139,6 @@
 .cw-diagram-filter-container .filterDiagram table.cw-grid .filter-wrapper .filter-cell input[type="checkbox"] {
   margin: 0px;
 }
-.cw-diagram-filter-container .filterDiagram table.cw-grid .filter-wrapper .filter-cell .btn.page-action i {
-  color: #808080;
-}
 .cw-diagram-filter-container .filterDiagram table.cw-grid .header-cell {
   text-align: center;
   font-weight: bold;
@@ -149,7 +147,7 @@
   height: auto;
   width: auto;
   margin: 5px;
-  color: #808080;
+  color: #ffffff;
 }
 .btn.btn-diagram-filter.enable i.fa {
   color: #e9636e;
