--- a/src/homePage/homePage.less
+++ b/src/homePage/homePage.less
@@ -53,6 +53,10 @@
       .homePage_evolveView {
         overflow: auto;
         height: inherit;
+
+        .cw-jvector-map {
+          height: 100%;
+        }
         .tableForPopoutWrapper {
           overflow: unset;
         }
